Update cotegory Slider

--- a/index.html
+++ b/index.html
@@ -55,22 +55,97 @@
     </nav>
     <div class="main">
         <div class="slide-container" id="slider-container">
-            <div class="slides">
-                <img src="images/1.jpeg" alt="" />
-                <div class="caption">text 1</div>
-            </div>
-            <div class="slides">
-                <img src="images/2.png" alt="" />
-                <div class="caption">text 2</div>
-            </div>
-            <div class="slides">
-                <img src="images/3.jpg" alt="" />
-                <div class="caption">text 3</div>
-            </div>
+            <!-- Data come frome slider storage -->
 
                 <span class="arrow prev" onclick="controller(-1)">&#10094;</span>
                 <span class="arrow next" onclick="controller(1)">&#10095;</span>
             </div>
+            <section class="product">
+                <h1 class="product_title">Product Categories</h1>
+
+
+
+<div class="slider-container">
+                <div class="product-card" id="cardbox">
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -1</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -2</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -3</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -4</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -5</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -6</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -7</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -8</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -9</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                    <div class="image">
+                        <img src="images/1.jpeg" class="slider_image">
+                        <h1 class="slider_title">Card -10</h1>
+                        <h4 class="slider_price">Price 200Rs</h4>
+                        <button class="slider_button">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="btn-section">
+                    <span class="arrow prev" onclick="prev()" >&#10094;</span>
+                    <span class="arrow next" onclick="next()" >&#10095;</span>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+            </section>
            
             <script src="script.js"></script>
 </body>
